--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "repos/PX4-Autopilot"]
 	path = repos/PX4-Autopilot
 	url = https://github.com/hmer101/PX4-Autopilot.git
+[submodule "ws_ros2/src/highbay_vicon_px4"]
+	path = ws_ros2/src/highbay_vicon_px4
+	url = https://github.com/hmer101/highbay_vicon_px4.git
